更新验证逻辑